--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,16 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Our Designers"
+    url: /Designers
+  - title: "Brides"
+    url: /Brides/
+  - title: "Plus Sized Brides"
+    url: /PlusSize
+  - title: "Bridesmaids"
+    url: /Bridesmaids
+    - title: "Sale Items"
+    url: /Sale
+    - title: "FAQ"
+    url: /FAQ
+    - title: "Book Appointment"
+    url: /
