--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description              : "Jefferson City's Bridal Boutique offering exquisite 
 url                      : "https://anamaries.github.io/"  #add domain name later
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "anamaries/anamaries.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/banner.png"
+teaser                   : "/assets/images/banner.png"
 logo                     : "/assets/images/banner.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : " " # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
