--- a/_config.yml
+++ b/_config.yml
@@ -138,10 +138,10 @@ footer:
   links:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      url: "https://www.facebook.com/anamaries"
+      url: "https://www.facebook.com/anamariesbridal"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/anamaries"
+      url: "https://instagram.com/anamariesbridal"
 
 # Reading Files
 include:
