--- a/_config.yml
+++ b/_config.yml
@@ -101,8 +101,8 @@ social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
-    - "https://www.facebook.com/anamaries"
-    - "https://instagram.com/anamaries"
+    - "https://www.facebook.com/anamariesbridal"
+    - "https://instagram.com/anamariesbridal"
 
 # Analytics
 analytics:
@@ -122,7 +122,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:anamaries@gmail.com"
+      url: "mailto:contact@anamariesbridal.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
