--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description              : "Jefferson City's Bridal Boutique offering exquisite 
 url                      : "https://anamaries.github.io/"  #add domain name later
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "anamaries/anamaries.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "./assets/images/banner.png"
-logo                     : "./assets/images/banner.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : "./assets/images/banner.jpg"
+logo                     : "./assets/images/banner.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : " " # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
