--- a/_config.yml
+++ b/_config.yml
@@ -113,13 +113,13 @@ analytics:
 
 
 # Site Author
-author:
-  name             : #"Imperial Blue Midwest Oasis"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : # "I am an **amazing** person."
-  location         : # "Somewhere"
-  email            :
-  links:
+# author:
+  #name             : #"Imperial Blue Midwest Oasis"
+  #avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  #bio              : # "I am an **amazing** person."
+  #location         : # "Somewhere"
+  #email            :
+  #links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:contact@anamariesbridal.com"
